objects/PEPE_Session_Slots__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <description>Field created part of May FY15 release</description>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PIW Sales/PIW</fullName>
                </value>
                <value>
                    <fullName>Marketing/ PIW</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_1_ARCH__c</fullName>
        <description>Address for each session slot is entered</description>
        <label>Address 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2_ARCH__c</fullName>
        <description>Address is mentioned across each session slot</description>
        <label>Address 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <description>Address is mentioned across each session slot</description>
        <label>Address 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agenda_ARCH__c</fullName>
        <description>Used by arch event</description>
        <label>Agenda</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alfresco_Id__c</fullName>
        <label>Alfresco Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Architecture_ARCH__c</fullName>
        <description>This picklist is created for each session selection and is also focused to get the LOV mapped with CVENT.</description>
        <label>Primary Architecture</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Theater_Super_Regions_Geography__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Collaboration</fullName>
                </value>
                <value>
                    <fullName>Cross-Architecture</fullName>
                </value>
                <value>
                    <fullName>Data Center / Virtualization</fullName>
                </value>
                <value>
                    <fullName>Enterprise Networking</fullName>
                </value>
                <value>
                    <fullName>Internet of Things (IoT)</fullName>
                </value>
                <value>
                    <fullName>None Specified</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Cloud-</fullName>
                </value>
                <value>
                    <fullName>Collaboration-</fullName>
                </value>
                <value>
                    <fullName>Cross-Architecture-</fullName>
                </value>
                <value>
                    <fullName>Data Center / Virtualization-</fullName>
                </value>
                <value>
                    <fullName>Enterprise Networking-</fullName>
                </value>
                <value>
                    <fullName>Internet of Things (IoT)-</fullName>
                </value>
                <value>
                    <fullName>None Specified-</fullName>
                </value>
                <value>
                    <fullName>Security-</fullName>
                </value>
                <value>
                    <fullName>Service Provider EPN-</fullName>
                </value>
                <value>
                    <fullName>Service Provider Mobility-</fullName>
                </value>
                <value>
                    <fullName>Service Provider Video-</fullName>
                </value>
                <value>
                    <fullName>Customer Experience-</fullName>
                </value>
                <value>
                    <fullName>Software-</fullName>
                </value>
                <value>
                    <fullName>Tap-</fullName>
                </value>
                <value>
                    <fullName>Capital</fullName>
                </value>
                <value>
                    <fullName>SERVICE PROVIDER-</fullName>
                </value>
                <value>
                    <fullName>TOOLS AND PROGRAMS-</fullName>
                </value>
                <value>
                    <fullName>Customer Experience</fullName>
                </value>
                <value>
                    <fullName>Software Programmability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Architecture_Event_Type__c</fullName>
        <description>This will provide the Event type of Architecture.</description>
        <formula>IF( 
ISPICKVAL( Training_Event__r.Type_of_Architecture_Event__c , 'Standard Remote')|| 
ISPICKVAL( Training_Event__r.Type_of_Architecture_Event__c , 'Multiple Sessions Remote'), 
IMAGE("/resource/Remote_Event","10", 20, 100), 

IF(
ISPICKVAL( Training_Event__r.Type_of_Architecture_Event__c , 'Standard Live')|| 
ISPICKVAL( Training_Event__r.Type_of_Architecture_Event__c , 'Multiple Sessions Live'), 
IMAGE("/resource/Live_Event", "10", 20, 100), 

"Red") 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Architecture Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Architecture__c</fullName>
        <description>This will provide the Architecture from Event.</description>
        <formula>TEXT( Training_Event__r.Architecture__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Architecture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audience_ARCH__c</fullName>
        <description>Each session slot needs audience selection and is also maintained for mapping for CVENT integration</description>
        <label>Audience</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Theater_Super_Regions_Geography__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>FE</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>PSS</fullName>
                </value>
                <value>
                    <fullName>Multi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audience_PIW__c</fullName>
        <description>Created this field part of May FY15 release to release</description>
        <label>Audience</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Theater_Super_Regions_Geography__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CXO</fullName>
                </value>
                <value>
                    <fullName>SME</fullName>
                </value>
                <value>
                    <fullName>MM</fullName>
                </value>
                <value>
                    <fullName>Multi</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>FE</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>PSS</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_retrieve_participants_from_WebEx__c</fullName>
        <description>Field created part of May FY15 release</description>
        <label>Auto retrieve participants from WebEx</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Automatically_send_registrants_to_WebEx__c</fullName>
        <description>Field created part of May FY15 release</description>
        <label>Automatically send registrants to WebEx</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CI_Created_Status__c</fullName>
        <description>Field created part of Jun FY15 relase for CVENT integration</description>
        <label>CVENT Created Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CI_Created_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field created part of Jun FY15 relase for CVENT integration</description>
        <label>CVENT Created by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Session_Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CI_Created_date__c</fullName>
        <description>Field created part of Jun FY15 relase for CVENT integration</description>
        <label>CVENT Created date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CI_Modified_Status__c</fullName>
        <description>Field created part of Jun FY15 relase for CVENT integration</description>
        <label>CVENT Modified Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CI_Modified_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field created part of Jun FY15 relase for CVENT integration</description>
        <label>CVENT Modified by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Session_Slots1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CI_Modified_date__c</fullName>
        <description>Field created part of Jun FY15 relase for CVENT integration</description>
        <label>CVENT Modified date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CLP_flag__c</fullName>
        <inlineHelpText>CLP Eligible flag value is inherited from the Training Event to current session slot only when it is created</inlineHelpText>
        <label>CLP Eligible?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSAT_Score__c</fullName>
        <description>This will provide the CSAT Score.</description>
        <label>CSAT Score</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <description>Capacity users</description>
        <label>Capacity</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_ARCH__c</fullName>
        <description>Country listed across each theatre region for a specific geo</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Cape Verde</fullName>
                </value>
                <value>
                    <fullName>Central African Republic</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Comoros</fullName>
                </value>
                <value>
                    <fullName>Congo, D.R.</fullName>
                </value>
                <value>
                    <fullName>Congo (Brazzaville)</fullName>
                </value>
                <value>
                    <fullName>Congo Dem</fullName>
                </value>
                <value>
                    <fullName>Cote d'Ivoire</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Event_Host__c</fullName>
        <description>This defines the Host for Country Event.</description>
        <label>Country Event Host</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Registration_Owner__c</fullName>
        <description>This defines the owner for Country Registration.</description>
        <label>Country Registration Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT( Training_Event__r.Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Date_Compare__c</fullName>
        <description>USED TO CHECK IF SESSION SLOT RECORD TO BE UPDATED IN CVENT</description>
        <formula>IF((DATETIMEVALUE(LastModifiedDate) &gt; DATETIMEVALUE(CI_Modified_date__c)), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cvent Date Compare</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Team__c</fullName>
        <description>These values are used for arch and is allowed for cvent integration.</description>
        <label>Delivery Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Cisco BU / WW</fullName>
                </value>
                <value>
                    <fullName>Cisco Learning Partner</fullName>
                </value>
                <value>
                    <fullName>Cisco PAM</fullName>
                </value>
                <value>
                    <fullName>Cisco SE</fullName>
                </value>
                <value>
                    <fullName>Disti SE</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Type_ARCH__c</fullName>
        <description>Delivery type is selected across each session slot and is also mapped for CVENT integration.</description>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Theater_Super_Regions_Geography__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Instructor-led</fullName>
                </value>
                <value>
                    <fullName>Web Based Training</fullName>
                </value>
                <value>
                    <fullName>Workshops</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>WebEx/Virtual</fullName>
                </value>
                <value>
                    <fullName>Telepresence (or Video Conference)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Classroom ILT</fullName>
                </value>
                <value>
                    <fullName>Virtual/Webex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <formula>TEXT( Training_Event__r.Delivery_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Calendar slot description</description>
        <label>***Description</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_In_Agenda__c</fullName>
        <label>Display In Agenda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Priority__c</fullName>
        <label>Display Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Time__c</fullName>
        <label>Display Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_want__c</fullName>
        <description>Select the type of meeting TP/Web Ex or Both.</description>
        <inlineHelpText>Displays the Event details when this field values is set to “Yes” or Displays the Session details when field value set to “No” + Publish to Calendar? is set to “Yes”</inlineHelpText>
        <label>Show data at event level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Publish_to_Calendar__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMEAR_Target_Audience__c</fullName>
        <label>EMEAR Target Audience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address_of_Presenter__c</fullName>
        <description>Email Address of Presenter</description>
        <label>Email Address of Presenter</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <description>This is the end date of the training session</description>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Day__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Day</label>
        <referenceTo>PEPE_Event_Day__c</referenceTo>
        <relationshipLabel>Session Tracks</relationshipLabel>
        <relationshipName>Session_Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <formula>Training_Event__r.Training_Event_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Proficiency_Level__c</fullName>
        <label>***Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Specialist</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Quarter__c</fullName>
        <description>Event Quarter</description>
        <label>Fiscal Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY19 Q1 - 07/29 - 10/27</fullName>
                </value>
                <value>
                    <fullName>FY19 Q2 - 10/28 - 01/26</fullName>
                </value>
                <value>
                    <fullName>FY19 Q3 - 01/27 - 04/27</fullName>
                </value>
                <value>
                    <fullName>FY19 Q4 - 04/28 - 07/27</fullName>
                </value>
                <value>
                    <fullName>FY20 Q1 - 07/28 - 10/26</fullName>
                </value>
                <value>
                    <fullName>FY20 Q2 - 10/27 - 01/25</fullName>
                </value>
                <value>
                    <fullName>FY20 Q3 - 01/26 - 04/25</fullName>
                </value>
                <value>
                    <fullName>FY20 Q4 - 04/26 - 07/25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Time_Zone__c</fullName>
        <description>world time zones</description>
        <label>Event Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT-12:00) Dateline</fullName>
                </value>
                <value>
                    <fullName>(GMT-11:00) Samoa</fullName>
                </value>
                <value>
                    <fullName>(GMT-10:00) Hawaii</fullName>
                </value>
                <value>
                    <fullName>(GMT-09:00) Alaska</fullName>
                </value>
                <value>
                    <fullName>(GMT-08:00) Pacific [US &amp; Canada]</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Mountain [US &amp; Canada]</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Mountain [Mexico]</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Arizona</fullName>
                </value>
                <value>
                    <fullName>(GMT-06:00) Central [US &amp; Canada]</fullName>
                </value>
                <value>
                    <fullName>(GMT-06:00) Saskatchewan</fullName>
                </value>
                <value>
                    <fullName>(GMT-06:00) Mexico</fullName>
                </value>
                <value>
                    <fullName>(GMT-06:00) Central America</fullName>
                </value>
                <value>
                    <fullName>(GMT-05:00) Eastern [US &amp; Canada]</fullName>
                </value>
                <value>
                    <fullName>(GMT-05:00) Indiana [East]</fullName>
                </value>
                <value>
                    <fullName>(GMT-05:00) SA Pacific</fullName>
                </value>
                <value>
                    <fullName>(GMT-04:00) Atlantic [Canada]</fullName>
                </value>
                <value>
                    <fullName>(GMT-04:00) Western SA</fullName>
                </value>
                <value>
                    <fullName>(GMT-04:00) Pacific SA</fullName>
                </value>
                <value>
                    <fullName>(GMT-03:30) Newfoundland</fullName>
                </value>
                <value>
                    <fullName>(GMT-03:00) Brasilia</fullName>
                </value>
                <value>
                    <fullName>(GMT-03:00) Eastern SA</fullName>
                </value>
                <value>
                    <fullName>(GMT-03:00) Greenland</fullName>
                </value>
                <value>
                    <fullName>(GMT-02:00) Mid-Atlantic</fullName>
                </value>
                <value>
                    <fullName>(GMT-01:00) Azores</fullName>
                </value>
                <value>
                    <fullName>(GMT-01:00) Cape Verde</fullName>
                </value>
                <value>
                    <fullName>(GMT) GMT</fullName>
                </value>
                <value>
                    <fullName>(GMT) Greenwich</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Europe Central</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Romance</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Europe Western</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Email_Id__c</fullName>
        <description>This field indicates the Email Id of Country Event Host.</description>
        <label>Host Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Host_Phone__c</fullName>
        <description>This field provides the Phone # of Host of Country Event.</description>
        <label>Host Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Host_key__c</fullName>
        <description>2018 Jan Release for APJ</description>
        <label>Host key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <description>This provide the comments</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Selecting language of the session executed that day</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Theater_Super_Regions_Geography__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Austrian</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Finish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Norwegean</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Romanian</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Slovene</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>